# scylla-kafka-rs

./: Cargo.toml  README.md  compose.yaml
scylla/: migrations.txt
src/: main.rs
