[package]
name = "scylla-kafka-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.1.11", features = ["derive"] }
futures = "0.3.27"
rdkafka = "0.29.0"
scylla = "0.7.0"
serde = "1.0.157"
serde_json = { version = "1.0.94", features = ["alloc"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
uuid = "1.3.0"
